--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-js-app",
+  "name": "react-js-table",
   "version": "1.0.0",
-  "description": "react-js-app",
+  "description": "react-js-table",
   "devDependencies": {
     "browserify": "^11.0.1",
     "gulp": "^3.9.0",
