--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp-util": "^3.0.6",
     "react": "^0.13.3",
     "reactify": "^1.1.1",
+    "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.3.1"
   }
